fix ( shop-modal ) : css to align picot and text

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -708,4 +708,40 @@ input, select, option:focus
 }
 
 
+/***************** MODAL*********************/
 
+#leftBoxWrapper {
+    display: grid;
+    grid-template-columns: 10px 200px;
+    column-gap: 5px;
+    grid-auto-rows: 1fr 1fr 1fr;
+    margin-left:15px;
+}
+
+.pictoMap {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.pictoMobile {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+/* .pictoEnvelope {
+    grid-column: 1;
+    grid-row: 3;
+} */
+.text_0 {
+    grid-column: 2 ;
+    grid-row: 1 ;
+}
+
+.text_1 {
+    grid-column: 2 ;
+    grid-row: 2 ;
+}
+.text_2 {
+    grid-column: 2 ;
+    grid-row: 3 ;
+}
